@@ -9,6 +9,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+...G...PS. [ZBX-7125] fixed improper reading of configuration files in case there were problems with included files; we now exit with failure (asaveljevs)
 ..F....... [ZBX-7257] improved config file validation (Eduard)
 ..F....... [ZBX-7249] changed setup pre-requisites values "yes" to "on" and "no" to "off", fixed numeric value validation and port text alignment (Pavels, Ivo)
 ..F....... [ZBX-7267] implement menu popup in trigger top 100 page for hosts and triggers columns (Eduard)
